[package]
name = "onionsalt"
version = "0.2.2"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "The onion salt encryption scheme"
license = "BSD-2-Clause"
repository = "https://github.com/droundy/onionsalt"

[dependencies]
rand = "0.3" # Or a specific version

arrayref = "0.2"

[dev-dependencies]
quickcheck = "*"
