[package]
name = "onionsalt"
version = "0.4.0"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "The onion salt encryption scheme"
license = "BSD-2-Clause"
repository = "https://github.com/droundy/onionsalt"
documentation = "https://droundy.github.io/onionsalt"

[dependencies]
rand = "0.3" # Or a specific version

arrayref = "0.2"

[dev-dependencies]
quickcheck = "*"
