[package]
name = "onionsalt"
version = "0.4.2"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
description = "The onion salt encryption scheme"
license = "BSD-2-Clause"
repository = "https://github.com/droundy/onionsalt"
documentation = "https://droundy.github.io/onionsalt"

[dependencies]
rand = "0.3" # Or a specific version
serde = "0.6"
serde_json = "0.6"
tempfile = "1"

arrayref = "0.2"

[dev-dependencies]
quickcheck = "*"
